--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -38,7 +38,7 @@
         margin-bottom: 20px;
     }
 
-    .navigation a, .navigation button {
+    .navigation a {
         display: block;
         font-size: 25px;
         margin: 0;
